@@ -1,8 +1,5 @@
 #@markup ruby
 
-# for the command line
-# gem 'thor' not any more
-# gem 'term-ansicolor'
-
+# for jeckyl command line processing
 gem 'optplus', '>=0.0.6'
 
